# zed

./: .gitignore  Cargo.toml  sync-build-install.md
.github/workflows/: sync-fork.yml
crates/editor/src/: display_map.rs  element.rs
crates/editor/src/display_map/: fold_map.rs
crates/language/src/: buffer.rs  language.rs
crates/language_core/src/: grammar.rs
crates/project_symbols/src/: project_symbols.rs
crates/send_code/: Cargo.toml  README.md
crates/send_code/src/: block_expander.rs  code_getter.rs  eval.rs  send_code.rs  senders.rs  settings.rs
crates/send_code/src/senders/: cmux.rs  ghostty.rs  iterm.rs  mod.rs  terminal_app.rs  tmux.rs  zed_terminal.rs
crates/settings/src/: vscode_import.rs
crates/settings_content/src/: settings_content.rs
crates/terminal_view/src/: terminal_panel.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs  zed.rs
